# yoree

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  hardhat.config.js  package-lock.json  package.json  proxy-server.js  test_integrations.py
anchor/: Anchor.toml
anchor/programs/strategy_program/src/: lib.rs
anchor/programs/vault_program/src/: lib.rs
anchor/tests/: strategy-program.test.ts
backend/: .env.example  Cargo.toml
backend/migrations/: 20240101000001_initial_schema.sql
backend/src/: ai_strategies.rs  blockchain.rs  config.rs  database.rs  gemma_proxy.rs  main.rs  trading.rs
config/: agent_config.example.toml  agent_config.toml
contracts/: MockPYUSD.sol  StrategyManager.sol
frontend/: .env.example  craco.config.js  package-lock.json  package.json  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  index.tsx
frontend/src/components/: AgentDashboard.tsx  BNBWalletConnect.tsx  LLMStrategyChef.tsx  MarketDataKitchen.tsx  Navbar.tsx  PerformanceDashboard.tsx  RDAgentDashboard.jsx  ResearchCorpus.tsx  SentimentSpice.tsx  TokenLaunch.tsx  VaultManager.tsx  WalletConnect.tsx
frontend/src/components/__tests__/: StrategyBuilder.test.tsx
frontend/src/components/auth/: Login.tsx
frontend/src/components/backtest/: BacktestResults.tsx  Backtester.tsx
frontend/src/components/common/: CryptoShakers.tsx
frontend/src/components/incentives/: TokenIncentivization.tsx
frontend/src/components/research/: ResearchCorpusManager.tsx
frontend/src/components/strategy/: BacktestResults.tsx  PDFUploader.tsx  SOLStrategyBuilder.tsx  SentimentAnalysis.tsx  StrategyBuilder.tsx  StrategyCreator.tsx  StrategyMarketplace.tsx  (+4 more)
frontend/src/contexts/: WalletContext.tsx
frontend/src/contracts/: StrategyManager.json
frontend/src/pages/: Backtest.tsx  CryptoGlossary.tsx  Dashboard.tsx  Home.tsx  ResearchCorpusPage.tsx
frontend/src/services/: agentService.ts  analyticsService.ts  api.ts  bnbService-fixed.ts  bnbService.ts  emergentMindsService.ts  geminiService.ts  paypalService.ts  performanceService.ts  researchService.ts  sentimentService.ts  solAgentService.ts  solanaTokensService.ts  strategyService.ts  traditionalFinanceStrategies.ts
frontend/src/styles/: styled.d.ts  theme.d.ts  theme.ts
frontend/src/types/: contracts.d.ts  global.d.ts  index.ts  process.d.ts
frontend/src/utils/: walletUtils.ts
scripts/: check-balance.js  check-balances.js  deploy-agents.sh  deploy-bnb-chain.js  deploy.js  gemma-proxy.js  generate-transactions.js  get-pyusd-tokens.js  interact-with-pyusd.js  setup-environment.js  test-core-functions.js  test-gemma-api.js  test-gemma.js  test-proxy.js  test-pyusd-swap.js  test-sol-agents.js  validate-deployment.js
src/: agent_framework.rs  backtesting.rs  data_sources.rs  factor_discovery.rs  gemma_integration.rs  llm_strategy.rs  main.rs  risk_management.rs  solana_integration.rs  visualization.rs
src/integrations/: binance.rs  coingecko.rs  messari.rs  mod.rs
(+5 files in other folders)
