[package]
name = "yoree"
version = "2.0.0"
edition = "2021"
description = "Advanced Agent-Based Quantitative Trading Platform"
authors = ["Chef Trader"]

[dependencies]
# Web Framework
actix-web = "4.4"
actix-rt = "2.9"
tokio = { version = "1.35", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date and Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP Client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Async
futures = "0.3"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Configuration
config = "0.13"

# Blockchain Integration
solana-sdk = "1.16"
solana-client = "1.16"

# Mathematical and Statistical Libraries
nalgebra = "0.32"
ndarray = "0.15"
statrs = "0.16"
rand = "0.8"
rand_distr = "0.4"

# Machine Learning

# Financial Analysis
ta = "0.5"

# Data Processing

# Parallel Processing
rayon = "1.8"

# Caching
redis = { version = "0.24", features = ["tokio-comp"] }

# Metrics and Monitoring
prometheus = "0.13"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Hashing
sha2 = "0.10"

# Compression
flate2 = "1.0"

# WebSocket
tungstenite = "0.20"
tokio-tungstenite = "0.20"

# JSON Web Tokens
jsonwebtoken = "9.2"

# Environment Variables
dotenv = "0.15"

# File I/O
csv = "1.3"

# Regular Expressions
regex = "1.10"

# URL Parsing
url = "2.5"

# Base64 Encoding
base64 = "0.21"

# Memory Management
parking_lot = "0.12"

# Lazy Static
once_cell = "1.19"

# Trait Objects
dyn-clone = "1.0"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true

[features]
default = ["full"]
full = ["gpu", "advanced-ml", "real-time"]
gpu = []
advanced-ml = []
real-time = []
