[package]
name = "yoree-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono"] }

# Blockchain/Web3
ethers = { version = "2.0", features = ["ws", "rustls"] }
web3 = "0.19"

# Environment and config
dotenv = "0.15"
config = "0.14"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# UUID
uuid = { version = "1.0", features = ["v4", "serde"] }

# Crypto
sha2 = "0.10"
hex = "0.4"
rand = "0.8"

# AI/ML (for trading strategies)
ndarray = "0.15"
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4" 